change bootstrap version; remove some unnecessary html; fix the bug with horizontal scroll in the page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,9 +33,11 @@ p {
 
 .toolbar {
   height: 60px;
-  margin: -8px;
+  //margin: -8px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding-left: 3%;
   a {
     margin: 0 16px 0 0;
   }
